# decv

./: Dockerfile  README.md  bip32_test_vectors.csv
python/: decv.py  requirements.txt
trezor/: CMakeLists.txt  main.c
trezor/trezor-crypto/: CMakeLists.txt
